# mise

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  drizzle.config.ts  next.config.ts  package-lock.json  package.json  smoke.json  tsconfig.tsbuildinfo  vitest.config.ts
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_fastembed.py  0003_conversational.py  0004_catalog_persistence.py  0005_rename_tables.py  0006_recommendation_group.py  0007_followup_suggestions.py
backend/app/: config.py  db.py  deps.py  main.py
backend/app/api/: catalog.py  health.py  recommendations.py  sessions.py  thumbs.py
backend/app/models/: __init__.py  catalog_collection.py  catalog_movie.py  movie_embedding.py  recommendation.py  session.py  tool_call.py
backend/app/schemas/: recommendation.py  session.py
backend/app/services/: catalog_service.py  embeddings.py  event_bus.py  llm_service.py  plex_client.py  recommender.py  scheduler.py  tools.py
backend/prompts/: system.md
backend/tests/: conftest.py  test_embeddings.py  test_llm_service.py  test_plex_client.py  test_sessions_api.py  test_tools.py
drizzle/: 0000_init.sql  0001_familiar_tomas.sql  0002_cheerful_proteus.sql  0003_mixed_morlocks.sql  0004_medical_vision.sql  0005_playlist_summaries.sql  0006_new_dormammu.sql
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
prompts/: nudge.md  (+2 more)
(+141 files in other folders)
